<resources>
    <string name="app_name">Movie Viewing App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!--name -->
    <string name="menu_home">home</string>
    <string name="tilte_movie">Movie</string>
    <string name="menu_popular">Popular</string>
    <string name="menu_upcoming">Upcoming</string>
    <string name="menu_topRated">Top Rated</string>
    <string name="menu_nowPlaying">Now Playing</string>
    <string name="welcome">Welcome</string>
    <string name="action_exit">Exit App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>