<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home"
            android:icon="@drawable/icon_home">

        </item>
    </group>

    <item android:title="@string/tilte_movie">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_popular"
                    android:title="@string/menu_popular"
                    android:icon="@drawable/icon_movie"/>
                <item
                    android:id="@+id/nav_upcoming"
                    android:title="@string/menu_upcoming"
                    android:icon="@drawable/icon_movie"/>
                <item
                    android:id="@+id/nav_topRated"
                    android:title="@string/menu_topRated"
                    android:icon="@drawable/icon_movie"/>
                <item
                    android:id="@+id/nav_nowPlaying"
                    android:title="@string/menu_nowPlaying"
                    android:icon="@drawable/icon_movie"/>
            </group>
        </menu>
    </item>


</menu>